@@ -2,7 +2,7 @@ package com.floney.floney.user.service;
 
 import com.floney.floney.book.entity.Book;
 import com.floney.floney.book.repository.BookRepository;
-import com.floney.floney.book.repository.BookUserCustomRepository;
+import com.floney.floney.book.repository.BookUserRepository;
 import com.floney.floney.common.dto.DelegateResponse;
 import com.floney.floney.common.exception.user.NotFoundSubscribeException;
 import com.floney.floney.user.dto.constant.SubscribeStatus;
@@ -23,11 +23,12 @@ import java.util.stream.Collectors;
 import static com.floney.floney.common.constant.Subscribe.SUBSCRIBE_MAX_BOOK;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class SubscribeService {
     private final SubscribeRepository subscribeRepository;
     private final UserRepository userRepository;
-    private final BookUserCustomRepository bookUserRepository;
+    private final BookUserRepository bookUserRepository;
     private final BookRepository bookRepository;
 
     @Transactional
@@ -60,19 +61,19 @@ public class SubscribeService {
         // 사용자 구독 해지
         if (SubscribeStatus.isExpired(status)) {
             return unsubscribeAndDelegateBooks(user);
-        } else {
-            // 사용자 구독
-            user.subscribe();
-            userRepository.save(user);
+        }
 
-            // 사용자 참여한 비활성화 가계부 모두, 구독 혜택 적용 & 방장을 사용자로
-            return bookUserRepository.findMyInactiveBooks(user)
+        // 사용자 구독
+        user.subscribe();
+        userRepository.save(user);
+
+        // 사용자 참여한 비활성화 가계부 모두, 구독 혜택 적용 & 방장을 사용자로
+        return bookUserRepository.findMyInactiveBooks(user)
                 .stream()
                 .map((book) -> book.subscribe(user))
                 .map(bookRepository::save)
-                .map(book -> DelegateResponse.of(book,user))
+                .map(book -> DelegateResponse.of(book, user))
                 .collect(Collectors.toList());
-        }
     }
 
     private List<DelegateResponse> unsubscribeAndDelegateBooks(User user) {
@@ -87,33 +88,31 @@ public class SubscribeService {
         return books.stream()
             .filter(this::isOverSubscribeLimit)
             .map(this::delegateOwner)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     // 구독 혜택을 받는 가게부(가계부원 2명 이상)
-    private boolean isOverSubscribeLimit(Book book) {
-        long count = bookUserRepository.countBookUser(book);
-        return count > SUBSCRIBE_MAX_BOOK.getValue();
+    private boolean isOverSubscribeLimit(final Book book) {
+        final int bookUserCount = bookUserRepository.countByBookExclusively(book);
+        return bookUserCount > SUBSCRIBE_MAX_BOOK.getValue();
     }
 
     private DelegateResponse delegateOwner(Book book) {
         // 구독을 한 다른 멤버 조회
-        Optional<User> wantDelegateWhoSubscribe = bookUserRepository.findBookUserWhoSubscribe(book);
+        Optional<User> wantDelegateWhoSubscribe = bookUserRepository.findRandomBookUserWhoSubscribeExclusively(book);
 
         // 존재할 경우 방장 위임
         if (wantDelegateWhoSubscribe.isPresent()) {
             User delegateTarget = wantDelegateWhoSubscribe.get();
             book.delegateOwner(delegateTarget);
             bookRepository.save(book);
-            return DelegateResponse.of(book,delegateTarget);
+            return DelegateResponse.of(book, delegateTarget);
         }
         // 미존재시, 가계부 비활성화
         else {
             book.inactiveBookStatus();
             bookRepository.save(book);
-            return DelegateResponse.of(book,null);
+            return DelegateResponse.of(book, null);
         }
-
     }
-
 }
